# so3g

./: meson.build  pyproject.toml
python/hk/: session.py  translator.py
python/proj/: coords.py  ranges.py
